app/k8s/base/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: test-env-service

spec:
  selector:
    app: test-env

  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

  type: NodePort
