app/k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: test-env-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /

spec:
  ingressClassName: nginx
  rules:
    - host: test-env.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: test-env-service
                port:
                  number: 80
